[gd_scene load_steps=4 format=3 uid="uid://boyfkwmo0qbdl"]

[ext_resource type="Texture2D" uid="uid://dmkgxgfvjbfi1" path="res://assets/car1.png" id="1_6sxyp"]
[ext_resource type="Script" path="res://car.gd" id="1_of2x2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d34pb"]
radius = 13.0
height = 52.0

[node name="Car" type="PathFollow2D"]
progress = 1643.75
loop = false
script = ExtResource("1_of2x2")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_d34pb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.99994, 0.0228634)
rotation = 1.5708
texture = ExtResource("1_6sxyp")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2(1, 0)
target_position = Vector2(89, 0)
collide_with_areas = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
